--- a/vignettes/1.Rmd
+++ b/vignettes/1.Rmd
@@ -31,7 +31,6 @@ As we developed also [LOTUS](https://lotusnprod.github.io/lotus-manuscript) with
 we provide it here as a starting point for your structure-organism pairs library. 
 You are free to complement it with your own structure-organism pairs or to filter it according to your needs. We also provide some hints on how to do it later in this vignette.
 
-
 To download it LOTUS structure-organism pairs locally, just run:
 
 ```{r}
@@ -39,3 +38,6 @@ library("timaR")
 setwd(dir = "../") ## adapt it in order to be in timaR root directory
 source(file = "inst/scripts/get_lotus.R")
 ```
+
+
+Rest to come ...
