--- a/vignettes/0.Rmd
+++ b/vignettes/0.Rmd
@@ -19,11 +19,38 @@ knitr::opts_chunk$set(
 This vignette describes the philosophy behind the infrastructure of **TIMA**.
 
 It is currently under construction. 
-Until it is finished, here are the most relevant commands
+
+## Philosophy
+
+Our main goals were **flexibility** and **reproducibility**. 
+
+### Flexibility
+
+To ensure flexibility, we tried to split the process in as much tiny parts as needed.
+So you can decide whether to skip an optional part, add your own processing, etc.
+We tried to cover most use cases, but of course they are not exhaustive. 
+If you feel like something useful to other users is missing, please fill an [issue](https://github.com/taxonomicallyinformedannotation/tima-r/issues).
+
+### Reproducibility
+
+After some time using TIMA, you will probably wonder: 
+"*What was the parameters I used to generate this file?*" ...
+Or a collaborator might ask you to share your data and parameters.
+Writing them down each time might be time consuming and not really in line with modern computational approaches.
+Therefore, we chose to implement all parameters of all steps (almost...) as **YAML** files.
+They are human-readable and can be used in batches.
+If you do not like YAML, parameters of each steps can also be given as command line arguments.
+They will then be saved as YAML you will be able to share.
+
+TODO EXAMPLE
 
 ## Use
 
+Under construction
+Until it is finished, here are the most relevant commands
+
 ### Copy initial parameters
+
 
 ```shell
 # copy the default params to adapat to your data later on
