--- a/vignettes/0.Rmd
+++ b/vignettes/0.Rmd
@@ -37,7 +37,7 @@ After some time using TIMA, you will probably wonder:
 "*What was the parameters I used to generate this file?*" ...
 Or a collaborator might ask you to share your data and parameters.
 Writing them down each time might be time consuming and not really in line with modern computational approaches.
-Therefore, we chose to implement all parameters of all steps (almost...) as **YAML** files.
+Therefore, we chose to implement all parameters of all steps (almost...) as YAML files.
 They are human-readable and can be used in batches.
 If you do not like YAML, parameters of each steps can also be given as command line arguments.
 They will then be saved as YAML you will be able to share.
@@ -50,7 +50,6 @@ Under construction
 Until it is finished, here are the most relevant commands
 
 ### Copy initial parameters
-
 
 ```shell
 # copy the default params to adapat to your data later on
