--- a/vignettes/3-processing.Rmd
+++ b/vignettes/3-processing.Rmd
@@ -26,10 +26,9 @@ library("timaR")
 
 Before running the corresponding code, do not forget to modify `config/params/process_annotations.yaml`.
 
-```{r}
+```{r, message=FALSE}
 source(file = "inst/scripts/process_annotations.R")
 ```
-
 
 The final exported file is formatted in order to be easily imported in [Cytoscape](https://cytoscape.org/) to further explore your data!
 
