--- a/vignettes/4-actual-performance.Rmd
+++ b/vignettes/4-actual-performance.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(
   comment = "#>"
 )
 knitr::opts_knit$set(root.dir = '..')
+knitr::opts_chunk$set(fig.path = "man/figures/")
 ```
 
 This vignette simply shows the actual performance of TIMA.
