--- a/vignettes/2-formatting.Rmd
+++ b/vignettes/2-formatting.Rmd
@@ -45,9 +45,21 @@ source(file = "inst/scripts/get_example_isdb.R")
 ```
 
 #### SIRIUS
-As, given its size, it is not easy to share a complete SIRIUS job, we prepared an example containing only summary files.
-We also generated the npc classes as in https://github.com/kaibioinfo/canopus_treemap.
-They have to be stored in the same folder under the name 'canopus_npc_summary.csv'.
+
+As SIRIUS jobs are long to perform, we provide an already computed SIRIUS Workspace.
+It has beeen generated on the same MGF as the GNPS and ISDB jobs with the following command:
+
+`
+config --IsotopeSettings.filter true --FormulaSearchDB BIO,COCONUT,GNPS,KNAPSACK,UNDP,PLANTCYC --Timeout.secondsPerTree 0 --FormulaSettings.enforced HCNOP --Timeout.secondsPerInstance 0 --AdductSettings.detectable [[M + H3N + H]+, [M - H2O + H]+, [M + K]+, [M - H4O2 + H]+, [M + H]+, [M + Na]+] --UseHeuristic.mzToUseHeuristicOnly 650 --AlgorithmProfile orbitrap --IsotopeMs2Settings IGNORE --MS2MassDeviation.allowedMassDeviation 5.0ppm --NumberOfCandidatesPerIon 1 --UseHeuristic.mzToUseHeuristic 300 --FormulaSettings.detectable B,Cl,Br,Se,S --NumberOfCandidates 10 --ZodiacNumberOfConsideredCandidatesAt300Mz 10 --ZodiacRunInTwoSteps true --ZodiacEdgeFilterThresholds.minLocalConnections 10 --ZodiacEdgeFilterThresholds.thresholdFilter 0.95 --ZodiacEpochs.burnInPeriod 2000 --ZodiacEpochs.numberOfMarkovChains 10 --ZodiacNumberOfConsideredCandidatesAt800Mz 50 --ZodiacEpochs.iterations 20000 --AdductSettings.enforced , --AdductSettings.fallback [[M + K]+, [M + H]+, [M + Na]+] --FormulaResultThreshold true --InjectElGordoCompounds true --StructureSearchDB BIO,COCONUT,GNPS,KNAPSACK,UNDP,PLANTCYC --RecomputeResults false formula zodiac fingerprint structure canopus
+`
+
+These parameters were not optimized and were only used to give an example output.
+
+Then, the summaries have been generated using:
+
+`
+sirius -i inst/extdata/annotations/sirius_example/ write-summaries -c --digits 3
+`
 
 You can get the example running:
 ```{r}
